--- a/NotificationTest/Base.lproj/Main.storyboard
+++ b/NotificationTest/Base.lproj/Main.storyboard
@@ -18,14 +18,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="2F2-dC-RNb">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="2F2-dC-RNb">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghp-u1-8F0">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="401"/>
                                         <state key="normal" title="Dynamic height with StackView"/>
                                         <connections>
-                                            <action selector="touchUpButton1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xNK-Md-ZxH"/>
+                                            <action selector="touchUpStackViewButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7S9-NR-Dwy"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Hx-qn-Sk6">
+                                        <rect key="frame" x="0.0" y="417" width="414" height="401"/>
+                                        <state key="normal" title="Map"/>
+                                        <connections>
+                                            <action selector="touchUpMapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zxh-xQ-4gC"/>
                                         </connections>
                                     </button>
                                 </subviews>
