--- a/NotificationTest/Base.lproj/Main.storyboard
+++ b/NotificationTest/Base.lproj/Main.storyboard
@@ -22,17 +22,24 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghp-u1-8F0">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="401"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="262"/>
                                         <state key="normal" title="Dynamic height with StackView"/>
                                         <connections>
                                             <action selector="touchUpStackViewButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7S9-NR-Dwy"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Hx-qn-Sk6">
-                                        <rect key="frame" x="0.0" y="417" width="414" height="401"/>
+                                        <rect key="frame" x="0.0" y="278" width="414" height="262"/>
                                         <state key="normal" title="Map"/>
                                         <connections>
                                             <action selector="touchUpMapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zxh-xQ-4gC"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66Q-sE-kZB">
+                                        <rect key="frame" x="0.0" y="556" width="414" height="262"/>
+                                        <state key="normal" title="SpriteKit"/>
+                                        <connections>
+                                            <action selector="touchUpSpriteKitButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lQo-jR-8ZX"/>
                                         </connections>
                                     </button>
                                 </subviews>
